fix save files?

--- a/ChromaCore.csproj
+++ b/ChromaCore.csproj
@@ -10,6 +10,11 @@
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="ChromaCoreServer\**" />
+    <EmbeddedResource Remove="ChromaCoreServer\**" />
+    <None Remove="ChromaCoreServer\**" />
+  </ItemGroup>
+  <ItemGroup>
     <None Remove="Icon.ico" />
     <None Remove="Icon.bmp" />
   </ItemGroup>
